A little modification on package build tools

--- a/PACKAGE.BUILD.TOOLS/Ubuntu_Packaging/usr/share/Pcynlitx/applications/pcynlitx.desktop
+++ b/PACKAGE.BUILD.TOOLS/Ubuntu_Packaging/usr/share/Pcynlitx/applications/pcynlitx.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=Pcynlitx
 GenericName=Library builder
 Comment=An intelligent multithread library generator
-Icon=/usr/share/Pcynlitx/icons/Pcynlitx.svg
+Icon=/usr/share/Pcynlitx/icons/pcynlitx.png
 Exec=/usr/bin/Pcynlitx
 StartupNotify=true
 MimeType=text/plain;
